# random-rust-examples

./: README.md
Actix_Example/: .env  Cargo.toml  README.md  app.db
Actix_Example/src/: main.rs
Actix_Example/src/base/api/: mod.rs  routes.rs
Actix_Example/src/base/api/extensions/: endpoint.rs  mod.rs  websocket.rs
Actix_Example/src/base/database/: connection.rs
Actix_Example/src/base/database/entities/: user.rs
Actix_Example/src/modules/: base.rs
Test1/src/: main.rs
