[package]
name    = "actix_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web           = "4"
actix-ws            = "0.3"
actix-web-validator = "7"
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
validator           = { version = "0.20", features = ["derive"] }
ammonia             = "4"
env_logger          = "0.11"
log                 = "0.4"
dotenvy             = "0.15"
sea-orm             = { version = "1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros"
]}
